photo loding issue solve

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="hero-section max-w-7xl mx-auto">
         <div
           class="z-10 mx-auto w-full bg-cover bg-bottom rounded-[36px] pt-[100px] pb-[160px] bg-gradient-to-r from-[#030712] to-[#030712] bg-no-repeat"
-          style="background-image: url(Images/banner.png)"
+          style="background-image: url(images/banner.png)"
         >
           <div class="hero-overlay bg-opacity-60"></div>
           <div class="text-center space-y-4">
