--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
                 MK Paribahan
               </h1>
               <p class="inter font-normal text-sm lg:text-xl pb-8 text-white">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Praesentium tempore libero et, saepe deserunt dignissimos eaque
-                corporis doloribus soluta incidunt!
+                Embark on an extraordinary journey with MK Paribahan! promising seamless experiences and unforgettable adventures at every stop along the way.
               </p>
-              <button class="bg-[#1DD100] px-8 py-5 rounded-md mb-28">
+              <button class="bg-[#1DD100] px-8 py-5 rounded-md mb-28 text-white text-xl">
                 Get Started
               </button>
             </div>
@@ -104,9 +102,8 @@
             <div class="stat-figure text-primary">
               <img src="images/people.png" alt="" />
             </div>
-            <div class="stat-title">Total Likes</div>
-            <div class="stat-value text-primary">25.6K</div>
-            <div class="stat-desc">21% more than last month</div>
+            <div class="stat-value text-primary">500K</div>
+            <div class="stat-title">Registered users</div>
           </div>
 
           <div
@@ -115,9 +112,8 @@
             <div class="stat-figure text-secondary">
               <img src="images/ticket-cupon.png" alt="" />
             </div>
-            <div class="stat-title">Page Views</div>
-            <div class="stat-value text-secondary">2.6M</div>
-            <div class="stat-desc">21% more than last month</div>
+            <div class="stat-value text-secondary">1.7 lacks</div>
+            <div class="stat-desc">Tickets sold</div>
           </div>
 
           <div
@@ -130,9 +126,8 @@
                 </div>
               </div>
             </div>
-            <div class="stat-value">86%</div>
-            <div class="stat-title">Tasks done</div>
-            <div class="stat-desc text-secondary">31 tasks remaining</div>
+            <div class="stat-value">80K+</div>
+            <div class="stat-title">Rental partners</div>
           </div>
         </div>
       </div>
@@ -146,11 +141,11 @@
         <div class="cuppon-cards flex flex-col lg:flex-row justify-center py-12 gap-6">
           <div class="cupon-card grid grid-cols-12 bg-[#FFBF0F] rounded-3xl">
             <div class="0ff-15 text-left col-span-6 p-10">
-              <h1 class="text-[40px] raleway font-semibold">15% OFF</h1>
-              <h3 class="text-xl text-[#03071266] font-semibold raleway">
+              <h1 class="text-[40px] inter font-semibold">15% OFF</h1>
+              <h3 class="text-xl  font-semibold raleway">
                 on your next purchase
               </h3>
-              <h3 class="text-[18px] font-medium raleway">use by January 2024</h3>
+              <h3 class="text-[18px] text-[#03071266] font-medium raleway">use by January 2024</h3>
             </div>
             <div class="col-span-1">
               <img class="min-h-full" src="images/cupon-devider.png" alt="" />
@@ -164,7 +159,7 @@
           </div>
           <div class="cupon-card grid grid-cols-12 bg-[#F78C9C] rounded-3xl">
             <div class="0ff-15 text-left col-span-6 p-10">
-              <h1 class="text-[40px] raleway font-semibold">20% OFF</h1>
+              <h1 class="text-[40px] inter font-semibold">20% OFF</h1>
               <h3 class="text-xl font-semibold raleway">
                 on your next purchase
               </h3>
@@ -198,7 +193,7 @@
             <h1
               class="text-center raleway text-[40px] font-bold text-[#030712]"
             >
-              P.H Paribahan
+              MK Paribahan
             </h1>
             <p class="inter text-[18px] font-normal text-[#03071299]">
               Yes, you can run unit tests and view the results directly within
@@ -227,8 +222,8 @@
                 </div>
                 <div class="flex">
                   <div><img src="images/seat-green.png" alt="" /></div>
-                  <h3 class="text-xl raleway font-bold text-[#1DD100]">
-                    <span> <span id="total_sets">40 </span> Seats left </span>
+                  <h3 class="text-xl inter font-bold text-[#1DD100]">
+                    <span> <span id="total_sets" class="inter">40 </span> Seats left </span>
                   </h3>
                 </div>
               </div>
@@ -305,7 +300,7 @@
           <div
             class="flex  justify-between items-center border-b-2 border-dashed border-[#03071233] py-6"
           >
-            <h2 class="text-[18px] font-semibold raleway text-[#03071299]">
+            <h2 class="text-[18px] font-semibold raleway ">
               Select Your Seat
             </h2>
           </div>
@@ -326,7 +321,7 @@
             </div>
           </div>
           <div class="flex justify-end items-center py-6">
-            <div>
+            <div class="min-h-[56px] w-[110px] bg-[#0307121A] flex justify-center items-center rounded-xl">
               <svg
                 width="26.000000"
                 height="26.000000"
@@ -413,7 +408,7 @@
         <div
             class="flex justify-between items-center border-b-2 border-dashed border-[#03071233] py-6"
           >
-            <h2 class="text-[18px] font-semibold raleway text-[#03071299]">
+            <h2 class="text-[18px] font-semibold raleway ">
               Select Your Seat
             </h2>
           </div>
@@ -428,12 +423,12 @@
                 Price
               </h2>
             </div>
-            <div class="" id="card-holder">
+            <div class="border-b-2 border-dashed  border-[#03071233]" id="card-holder">
               
             </div>
             <div class="flex justify-between items-center gap-2 pt-8 pb-4">
-              <h2 class="text-[18px] font-semibold raleway text-[#030712] ">Total Price</h2>
-              <h2 class="text-[18px] font-semibold raleway text-[#030712]">
+              <h2 class="text-[18px] font-semibold inter text-[#030712] ">Total Price</h2>
+              <h2 class="text-[18px] font-semibold inter text-[#030712]">
                 BDT <span id="total-price">0</span>
               </h2>
             </div>
@@ -443,41 +438,43 @@
             </div>
             <div>
             <div id="show-discount" class="flex justify-center items-center gap-2 pt-8 pb-4 hidden">
-              <h2 class="text-xl font-bold">You get discount= <span id="discount">654</span> tk</h2>
+              <h2 class="text-xl inter font-bold text-[#1DD100]">You get discount= <span id="discount">654</span> tk</h2>
             </div>
             <div>
 
             </div>
             <div class="flex justify-between items-center gap-2 pt-8 pb-4">
-              <h2 class="text-[18px] font-semibold raleway text-[#030712] ">Grand Price</h2>
-              <h2 class="text-[18px] font-semibold raleway text-[#030712]">
+              <h2 class="text-[18px] font-semibold inter text-[#030712] ">Grand Price</h2>
+              <h2 class="text-[18px] font-semibold inter text-[#030712]">
                 BDT <span id="grand-price">0</span>
               </h2>
             </div>
+          </div>
+          </div>
             <div class="form space-y-4">
               <label class="form-control w-full">
                 <div class="label">
-                  <span class="label-text text-[18px] font-semibold raleway text-[#030712]">
+                  <span class="label-text text-[18px] font-semibold inter text-[#030712]">
                     BDT <span id="total-price">Passenger Name*</span>
                 </div>
                 <input type="text" placeholder="Enter your name" class="input input-bordered w-full min-h-[64px] " />
               </label>
               <label class="form-control w-full">
                 <div class="label">
-                  <span class="label-text text-[18px] font-semibold raleway text-[#030712]">
+                  <span class="label-text text-[18px] inter font-semibold raleway text-[#030712]">
                     BDT <span id="total-price">Phone Number*</span>
                 </div>
                 <input type="text" placeholder="Enter your phone number" id="Phone-number" class="input input-bordered w-full min-h-[64px] " required />
               </label>
               <label class="form-control w-full">
                 <div class="label">
-                  <span class="label-text text-[18px] font-semibold raleway text-[#030712]">
+                  <span class="label-text text-[18px] font-semibold inter text-[#030712]">
                     BDT <span id="total-price">Email ID</span>
                 </div>
                 <input type="text" placeholder="Enter your email id" class="input input-bordered w-full min-h-[64px] " />
               </label>
               <!-- Open the modal using ID.showModal() method -->
-            <button class="btn w-full min-h-[64px] bg-[#1DD100] rounded-2xl text-white" onclick="modal()">Next</button>
+            <button class="btn w-full min-h-[64px] bg-[#1DD100] inter rounded-2xl text-white" onclick="modal()">Next</button>
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
               <div class="modal-box flex flex-col justify-center items-center p-12">
                    <div class="mb-7">
@@ -505,11 +502,40 @@
                 BDT <span id="total-price">Cancellation Policy</span>
               </h2>
             </div>
-          </div>
-      </div>
     </div>
     </main>
-    <footer></footer>
+    <footer class="p-10 bg-neutral text-neutral-content bg-[#030712]">
+      <div class="max-w-7xl mx-auto ">
+        <div class="">
+          <div class=" flex justify-between border-b-[1px] border-dashed border-[#918686] py-12">
+            <div class=" space-y-6">
+              <h2 class="text-4xl raleway font-extrabold">P-Ticket</h2>
+              <p class=" text-[18px] inter ">P-Ticket is a digital platform to make your daily commuting better.</p>
+            </div>
+            <div class=" space-y-6">
+              <h3 class=" text-xl font-semibold">Download our app</h3>
+              <div><img src="images/playstore.png" alt=""></div>
+            </div>
+          </div>
+          <div class=" flex justify-between  py-8">
+            <div class=" space-y-6">
+              <p class=" text-[18px] inter ">P-Ticket is a digital platform to make your daily commuting better.</p>
+            </div>
+            <div class=" space-y-6">
+              <ul class=" flex justify-center gap-8">
+                <li>Terms & condition</li>
+                <li>Return & refund policy</li>
+                <li>Privacy policy</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div>
+
+        </div>
+      </div>
+    </footer>
+    
     <script src="script/App.js"></script>
   </body>
 </html>
