--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       
     </style>
   </head>
-  <body class=" mx-6 lg:mx-0">
+  <body class="">
     <!-- header  --------------------------------------------- -->
-    <div class="max-w-7xl mx-auto">
-      <header class="flex justify-between items-center py-9">
+    <div class="max-w-7xl mx-auto  ">
+      <header class="flex justify-between items-center py-9 mx-6 lg:mx-0">
         <div class="logo">
           <h2 class=" text-3xl lg:text-4xl text-[#030712] raleway font-extrabold">
             MK-Ticket
@@ -65,7 +65,7 @@
         </div>
       </header>
     </div>
-    <main>
+    <main class="mx-6 lg:mx-0">
       <!-- hero section ---------------------------------------------- -->
       <div class="hero-section max-w-7xl mx-auto">
         <div
