--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="off-20 flex items-center col-span-5 text-left p-[52px]">
               <div>
-                <h1 id="offerFify" class="text-2xl lg:text-3xl raleway font-bold"> NEW15</h1>
+                <h1 id="offerFify" class="text-xl lg:text-3xl raleway font-bold"> NEW15</h1>
               <h3 class="text-xl text-[#03071266] font-medium raleway">Coupon Code</h3>
               </div>
             </div>
@@ -349,6 +349,9 @@
               <div class=" grid grid-cols-5 gap-3  lg:gap-x-8 lg:gap-y-6">
               <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
               <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A1</button></div>
+              <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A2</button></div>
+              <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
+              <div class="col-span-2"><button class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">B1</button></div>
               <div class="col-span-2"><button class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">B2</button></div>
               <div class=" col-span-1 flex items-center text-xl font-semibold">C</div>
               <div class="col-span-2"><button class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">C1</button></div>
