--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
               <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A1</button></div>
               <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A2</button></div>
-              <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
+              <div class=" col-span-1 flex items-center text-xl font-semibold">B</div>
               <div class="col-span-2"><button class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">B1</button></div>
               <div class="col-span-2"><button class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">B2</button></div>
               <div class=" col-span-1 flex items-center text-xl font-semibold">C</div>
