--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
           </div>
           <!-- tickit select section -------------------------------------- -->
-          <div class="tickits flex justify-between ">
+          <div id="tickit-section" class="tickits flex justify-between ">
               <div class=" grid grid-cols-5 gap-3  lg:gap-x-8 lg:gap-y-6">
               <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
               <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A1</button></div>
