--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Embark on an extraordinary journey with MK Paribahan! promising seamless experiences and unforgettable adventures at every stop along the way.
               </p>
               <button class="bg-[#1DD100] px-8 py-5 rounded-md mb-28 text-white text-xl">
-                Get Started
+                <a href="#tickit-section">Get Started</a>
               </button>
             </div>
           </div>
@@ -138,9 +138,9 @@
             Best offers for you
           </h1>
         </div>
-        <div class="cuppon-cards flex flex-col lg:flex-row justify-center py-12 gap-6">
-          <div class="cupon-card grid grid-cols-12 bg-[#FFBF0F] rounded-3xl">
-            <div class="0ff-15 text-left col-span-6 p-3 lg:p-10">
+        <div class="cuppon-cards flex flex-col  lg:flex-row justify-between py-12 gap-6">
+          <div class="cupon-card grid grid-cols-12 flex-1 items-center  bg-[#FFBF0F] rounded-3xl">
+            <div class=" 0ff-15  text-left col-span-6 p-3 lg:p-10">
               <h1 class=" text-2xl lg:text-[40px] inter font-semibold">15% OFF</h1>
               <h3 class="text-xl  font-semibold raleway">
                 on your next purchase
@@ -157,7 +157,7 @@
               </div>
             </div>
           </div>
-          <div class="cupon-card grid grid-cols-12 bg-[#F78C9C] rounded-3xl">
+          <div class="cupon-card grid grid-cols-12 items-center flex-1 bg-[#F78C9C] rounded-3xl">
             <div class="0ff-15 text-left col-span-6 p-3 lg:p-10">
               <h1 class="text-2xl lg:text-[40px] inter font-semibold">20% OFF</h1>
               <h3 class="text-xl font-semibold raleway">
@@ -293,8 +293,7 @@
         </div>
       
       <!-- tickit-boocking ------------------------------ -->
-      <div
-        class="tickit-boocking grid max-w-7xl mx-auto bg-white rounded-3xl  grid-cols-12 lg:p-8"
+      <div id="tickit-section" class="tickit-boocking grid max-w-7xl mx-auto bg-white rounded-3xl  grid-cols-12 lg:p-8"
       >
         <div class="col-span-12 lg:col-span-7 lg:p-6 lg:border-r-2 border-dashed border-[#0307124D] ">
           <div
@@ -345,7 +344,7 @@
             </div>
           </div>
           <!-- tickit select section -------------------------------------- -->
-          <div id="tickit-section" class="tickits flex justify-between ">
+          <div class="tickits flex justify-between ">
               <div class=" grid grid-cols-5 gap-3  lg:gap-x-8 lg:gap-y-6">
               <div class=" col-span-1 flex items-center text-xl font-semibold">A</div>
               <div class="col-span-2"><button  class="btn btn-add-card  h-0 lg:h-14 w-[60px] lg:w-[110px] text-xl font-semibold">A1</button></div>
@@ -505,6 +504,9 @@
     </div>
     </main>
     <footer class="p-10 bg-neutral text-neutral-content bg-[#030712]">
+      <div>
+        
+      </div>
       <div class="max-w-7xl mx-auto ">
         <div class="">
           <div class=" flex flex-col lg:flex-row justify-between border-b-[1px] border-dashed border-[#918686] py-12">
