add top-icon at footer

--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
       
     </style>
   </head>
-  <body class="">
+  <body  class="">
     <!-- header  --------------------------------------------- -->
-    <div class="max-w-7xl mx-auto  ">
-      <header class="flex justify-between items-center py-9 mx-6 lg:mx-0">
+    <div id="Home" class="max-w-7xl mx-auto  ">
+      <header class="flex justify-between items-center py-9 mx-5 lg:mx-0">
         <div class="logo">
-          <h2 class=" text-3xl lg:text-4xl text-[#030712] raleway font-extrabold">
-            MK-Ticket
-          </h2>
+          <a href="#Home">
+            <h2 class=" text-3xl lg:text-4xl text-[#030712] raleway font-extrabold">
+              MK-Ticket
+            </h2>
+          </a>
         </div>
         <div class="bus px-7 py-4 border border-[#1DD100] bg-[#1DD1001A] rounded-xl">
           <h3 class="text-xl raleway font-bold text-[#1DD100]">
@@ -65,7 +67,7 @@
         </div>
       </header>
     </div>
-    <main class="mx-6 lg:mx-0">
+    <main class="mx-5 lg:mx-0">
       <!-- hero section ---------------------------------------------- -->
       <div class="hero-section max-w-7xl mx-auto">
         <div
@@ -139,31 +141,35 @@
           </h1>
         </div>
         <div class="cuppon-cards flex flex-col  lg:flex-row justify-between py-12 gap-6">
-          <div class="cupon-card grid grid-cols-12 flex-1 items-center  bg-[#FFBF0F] rounded-3xl">
-            <div class=" 0ff-15  text-left col-span-6 p-3 lg:p-10">
-              <h1 class=" text-2xl lg:text-[40px] inter font-semibold">15% OFF</h1>
+          <div class="cupon-card grid grid-cols-12 flex-1   bg-[#FFBF0F] rounded-3xl">
+            <div class=" 0ff-15 flex flex-col justify-center items-center  text-left col-span-6 p-3 lg:p-10">
+              <div>
+                <h1 class=" text-2xl lg:text-[40px] inter font-semibold">15% OFF</h1>
               <h3 class="text-xl  font-semibold raleway">
                 on your next purchase
               </h3>
+              </div>
               <h3 class="text-[18px] text-[#03071266] font-medium raleway">use by January 2024</h3>
             </div>
             <div class="col-span-1">
               <img class="min-h-full" src="images/cupon-devider.png" alt="" />
             </div>
-            <div class="off-20 flex items-center col-span-5 text-left p-[52px]">
+            <div class="off-20 flex items-center col-span-5 text-left p-3 lg:p-[52px]">
               <div>
                 <h1 id="offerFify" class="text-xl lg:text-3xl raleway font-bold"> NEW15</h1>
               <h3 class="text-xl text-[#03071266] font-medium raleway">Coupon Code</h3>
               </div>
             </div>
           </div>
-          <div class="cupon-card grid grid-cols-12 items-center flex-1 bg-[#F78C9C] rounded-3xl">
-            <div class="0ff-15 text-left col-span-6 p-3 lg:p-10">
-              <h1 class="text-2xl lg:text-[40px] inter font-semibold">20% OFF</h1>
+          <div class="cupon-card grid grid-cols-12  flex-1 bg-[#F78C9C] rounded-3xl">
+            <div class="0ff-15 flex flex-col items-center justify-center  text-left col-span-6 p-3 lg:p-10">
+              <div class=" ">
+                <h1 class="text-2xl lg:text-[40px] inter font-semibold">20% OFF</h1>
               <h3 class="text-xl font-semibold raleway">
                 on your next purchase
               </h3>
               <h3 class="text-[18px] font-medium raleway text-[#03071266]">use by January 2024</h3>
+              </div>
             </div>
             <div class="col-span-1">
               <img class="min-h-full" src="images/cupon-devider.png" alt="" />
@@ -504,10 +510,10 @@
     </div>
     </main>
     <footer class="p-10 bg-neutral text-neutral-content bg-[#030712]">
-      <div>
-        
+      <div class="flex justify-center mt-[-85px] z-0">
+        <a href="#Home" class="" ><img class="w-[70px] " src="images/arrow-top.png" alt=""></a>
       </div>
-      <div class="max-w-7xl mx-auto ">
+      <div class="max-w-7xl mx-auto z-40">
         <div class="">
           <div class=" flex flex-col lg:flex-row justify-between border-b-[1px] border-dashed border-[#918686] py-12">
             <div class=" space-y-6">
