--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           <div class=" flex flex-col
           lg:flex-row justify-between  py-8">
             <div class=" space-y-6">
-              <p class=" text-[18px] inter ">P-Ticket is a digital platform to make your daily commuting better.</p>
+              <p class=" text-[18px] inter ">All right reserved @md mydul islam Mahim 2024</p>
             </div>
             <div class=" space-y-6 pt-5">
               <ul class=" flex flex-col lg:flex-row justify-center gap-4 lg:gap-8">
