--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
             </div>
     </div>
     </main>
-    <footer class="p-10 bg-neutral text-neutral-content bg-[#030712]">
-      <div class="flex justify-center mt-[-85px] z-0">
-        <a href="#Home" class="" ><img class="w-[70px] " src="images/arrow-top.png" alt=""></a>
+    <footer class="p-10 bg-neutral text-neutral-content bg-[#030712] mt-20">
+      <div class="flex justify-center mt-[-80px] z-0">
+        <a href="#Home" class="" ><img class="w-[65px] " src="images/arrow-top.png" alt=""></a>
       </div>
       <div class="max-w-7xl mx-auto z-40">
         <div class="">
